--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
-Version 0.1.1+git:
+Version 0.1.3:
+ * Fix an off-by-one bug causing problems with the TC recolor jobs.
+
+Version 0.1.2:
  * Added support for BMP, PSD* and XCF* files (* indicates an option that
    depends on Qt4's build-time configuration.)
  * Drop support for image files and data from other applications.
