--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 Version 0.2.0:
+ * Added an embedded application icon and version information to Windows
+   builds.
  * Implemented built-in editors for custom color ranges and palettes,
    as well as options to export individual items as WML (either to a
    new file, or the system clipboard).
