--- a/README
+++ b/README
@@ -1,13 +1,17 @@
 Wesnoth RCX (codename “Morning Star”) — Read-Me
 -----------------------------------------------
 
-This is a Qt4-based application for recoloring Wesnoth graphics using the
-game’s color range-based Team Coloring algorithm, or optionally palette-based
-recoloring.
+This is a Qt-based GUI application for recoloring Wesnoth graphics using the
+game’s own team coloring mechanism.
 
-Born from the same source as Wesnoth-TC [1], RCX is intended to be as
-user-friendly as possible in order to appeal to the artists and enthusiasts in
-the audience.
+Derived from the Wesnoth-TC codebase [1], Wesnoth RCX is intended as an aid
+for Wesnoth sprite artists and campaign developers who need to preview their
+unit artwork as it will be displayed in-game under various team coloring
+parameters. It provides a quick preview functionality, as well as the option
+to save the results to disk for other purposes. A built-in visual palette and
+color range editor allows artists and coders to play around with the various
+possibilities offered by Wesnoth’s team coloring and generate WML code for use
+in add-ons.
 
 
 Installing
@@ -19,26 +23,58 @@ Please see the INSTALL file for installation instructions.
 Usage
 -----
 
-To start RCX, just run the “morningstar” executable. You’ll be asked to choose
-a file to open. Once done, you’ll be presented the complete user interface,
-where you can preview your file after applying a recolor transformation with
-different settings and, optionally, generate new image files with your changes.
+To start RCX, just run the “wesnoth-rcx” executable. You’ll be asked to choose
+an image file (PNG or BMP) to open. Once done, you’ll be presented with the
+complete user interface, where you can preview your file under different
+recoloring settings. You can also generate recolored copies of the original
+image file this way.
 
-Currently only the three main source palettes (TC magenta, flag green and
-ellipse red) are supported, along with the 9 team color ranges used in mainline
-Wesnoth. Support for custom ranges and palettes is planned to be added in the
-future.
+The Tools menu allows access to the built-in color range and palette editors.
+By default, there will be no ranges and palettes listed in them. Any items you
+create will be stored in the application’s configuration. You can choose to
+generate WML code for your user-defined palettes and ranges, and copy it to
+clipboard, or simply save it to a file.
+
+
+Configuration
+-------------
+
+RCX stores its configuration in platform-dependent locations using Qt’s own
+application settings facility (QSettings).
+
+ * On Linux, the configuration will be stored in the file
+   $HOME/.config/Wesnoth/Morning Star.conf
+
+ * On Windows, the configuration will be stored in the system Registry, under
+   HKEY_CURRENT_USER\Software\Wesnoth\Morning Star
+
+ * On Mac OS X, the configuration will be stored in the file
+   $HOME/Library/Preferences/com.Wesnoth.Morning Star.plist
 
 
 Reporting bugs
 --------------
 
-All bugs in Wesnoth RCX should be reported by email to <shadowm@wesnoth.org> —
-please include “[RCX]” in your message’s subject line to speed up the process,
-since I occasionally ignore my email inbox unless there are messages with
-unusually descriptive subjects. ;-)
+This software is still a work-in-progress, and as a such it may contain bugs.
 
+There is an issue tracker for this kind of thing, hosted at Github:
+
+  https://github.com/shikadilord/morningstar/issues
+
+When reporting a bug, make sure to provide as much relevant information as
+possible; the operating system class (i.e. Windows vs. Mac OS X) and version
+(i.e. XP, 7) you are using is extremely important, as well as the steps to
+reproduce and the Wesnoth RCX version affected.
+
+Don’t submit bugs for earlier versions of Wesnoth RCX, since those have a high
+chance of being fixed in the latest release. If you are in doubt about whether
+you are already using the latest version, you can find more information here:
+
+  http://shadowm.rewound.net/projects/wesnoth-tc.php
+
+
+--
 
 Have lots of fun!
 
-Ignacio R. Morelle a.k.a. “shadowmaster”
+Ignacio Riquelme Morelle <shadowm2006@gmail.com>
