--- a/README
+++ b/README
@@ -4,14 +4,17 @@ Wesnoth RCX (codename “Morning Star”) — Read-Me
 This is a Qt-based GUI application for recoloring Wesnoth graphics using the
 game’s own team coloring mechanism.
 
-Derived from the Wesnoth-TC codebase [1], Wesnoth RCX is intended as an aid
-for Wesnoth sprite artists and campaign developers who need to preview their
-unit artwork as it will be displayed in-game under various team coloring
-parameters. It provides a quick preview functionality, as well as the option
-to save the results to disk for other purposes. A built-in visual palette and
-color range editor allows artists and coders to play around with the various
-possibilities offered by Wesnoth’s team coloring and generate WML code for use
-in add-ons.
+Derived from the Wesnoth-TC codebase, Wesnoth RCX is intended as an aid for
+Wesnoth sprite artists and campaign developers who need to preview their unit
+artwork as it will be displayed in-game under various team coloring parameters.
+It provides a quick preview functionality, as well as the option to save the
+results to disk for other purposes. A built-in visual palette and color range
+editor allows artists and coders to play around with the various possibilities
+offered by Wesnoth’s team coloring and generate WML code for use in add-ons.
+
+Wesnoth RCX is open-source software, released under the terms of the GNU
+General Public License, version 2 or any later version. See the COPYING file
+for details.
 
 
 Installing
