Add text file signature

--- a/INSTALL
+++ b/INSTALL
@@ -58,3 +58,10 @@ If this does not fit your needs, you can copy the executable file generated in
 the previous step to a different location, such as $HOME/bin, or just keep it
 where it is — installation is *not* strictly necessary. However, you may want
 to manually create a desktop or applications menu launcher for easy access.
+
+
+--
+
+Have lots of fun!
+
+Ignacio Riquelme Morelle <shadowm2006@gmail.com>
