Move 'Reporting bugs' section from the README to BUGS, and add a list of known issues

--- a/README
+++ b/README
@@ -65,22 +65,8 @@ application settings facility (QSettings).
 Reporting bugs
 --------------
 
-This software is still a work-in-progress, and as a such it may contain bugs.
-
-There is an issue tracker for this kind of thing, hosted at Github:
-
-  https://github.com/shikadilord/morningstar/issues
-
-When reporting a bug, make sure to provide as much relevant information as
-possible; the operating system class (i.e. Windows vs. Mac OS X) and version
-(i.e. XP, 7) you are using is extremely important, as well as the steps to
-reproduce and the Wesnoth RCX version affected.
-
-Don’t submit bugs for earlier versions of Wesnoth RCX, since those have a high
-chance of being fixed in the latest release. If you are in doubt about whether
-you are already using the latest version, you can find more information here:
-
-  http://shadowm.rewound.net/projects/wesnoth-tc.php
+See the included BUGS file for a list of known bugs in this release and
+instructions to report new bugs.
 
 
 Git repository
