--- a/NEWS
+++ b/NEWS
@@ -1,40 +1,75 @@
-Version 0.2.0:
+Version 0.2.0
+-------------
+
  * Added an embedded application icon and version information to Windows
    builds.
+
  * Added various preview background color options.
+
  * Implemented built-in editors for custom color ranges and palettes,
    as well as options to export individual items as WML (either to a
    new file, or the system clipboard).
+
  * Implemented Reload (F5) action.
+
  * Implemented Recent Files list in the File menu.
+
  * Redesigned the main window.
 
-Version 0.1.4:
+
+Version 0.1.4
+-------------
+
  * Complete drag-and-drop support.
+
  * Implemented basic zoom support.
 
-Version 0.1.3:
+
+Version 0.1.3
+-------------
+
  * Fix an off-by-one bug causing problems with the TC recolor jobs.
 
-Version 0.1.2:
+
+Version 0.1.2
+-------------
+
  * Added support for BMP, PSD* and XCF* files (* indicates an option that
    depends on Qt4's build-time configuration.)
+
  * Drop support for image files and data from other applications.
+
  * Minor UI improvements or revisions.
 
-Version 0.1.1:
+
+Version 0.1.1
+-------------
+
  * Preliminary production name: “Wesnoth RCX” (a.k.a. RCX).
+
  * Made the main window resizable again — now widgets expand or shrink
    accordingly.
+
  * Added generated file paths to completed job reports.
+
  * Fixed some glitches with selection changes in the color ranges listbox.
+
  * Minor UI improvements or revisions.
 
-Version 0.1.0.1:
+
+Version 0.1.0.1
+---------------
+
  * Fixed a bogus message when canceling the Open action.
+
  * Made the window non-resizable since widgets don’t adjust to it yet.
+
  * Previews are now centered.
+
  * Correctly remember the path to the currently opened file.
 
-Version 0.1.0:
+
+Version 0.1.0
+-------------
+
  * Initial version.
