mainwindow: Rework the preview background color mechanism by using single-target signal dispatching and extra action data, and allow persistence across runs

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ Version 0.2.1
 
  * Add Colors dialog: Minor visual improvements
 
+ * Main: Make preview background color setting persistent.
+
  * Palette Editor: "Add from List" should stay disabled when there are no
    available palettes.
 
