--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ Version 0.3.0
 
  * Main: Zoom view in/out using Ctrl++ (plus) or Ctrl+- (minus).
 
+ * Main: Zoom view in/out using Ctrl+<horizontal scrollwheel>.
+
 
 Version 0.2.1
 -------------
