--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ Version 0.3.0
 
  * Main: Zoom view in/out using Ctrl++ (plus) or Ctrl+- (minus).
 
- * Main: Zoom view in/out using Ctrl+<horizontal scrollwheel>.
+ * Main: Zoom view in/out using Ctrl+<vertical scrollwheel>.
 
 
 Version 0.2.1
